<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginMainBlock"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5E8DA"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/welcomeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="46dp"
                android:paddingTop="20.0dip"
                android:paddingEnd="46dp"
                android:paddingBottom="24.0dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/geeksLogo"
                    android:layout_width="49.0dip"
                    android:layout_height="25.0dip"
                    android:src="@drawable/ic_vk_new_logo" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/metropolis_semibold"
                    android:text="@string/forgot_passwords"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.52"
                    android:fontFamily="@font/metropolis_regular"
                    android:lineSpacingExtra="5.0dip"
                    android:text="@string/forget_password_dec"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginCardView"
                android:layout_width="match_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/login_top_rounded_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeView">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/EnterYourEmail"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/metropolis_semibold"
                    android:text="@string/enter_your_email"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_text_hint"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toBottomOf="@+id/EnterYourEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sanspro_regular"
                        android:hint="@string/enter_your_username_or_email"
                        android:inputType="textEmailAddress"
                        android:tag="binding_1"
                        android:textColor="@color/color_text_primary"
                        android:textColorHint="@color/color_text_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logInButton"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/shape_login_button2"
                    android:fontFamily="@font/sanspro_semibold"
                    android:tag="binding_2"
                    android:text="@string/send_code"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16.0sp"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="46.0dip" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLineStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="46.0dip" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLineBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="26.0dip" />


                <LinearLayout
                    android:id="@+id/signUpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40.0dip"
                    android:background="#00ffffff"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="10.0dip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sanspro_regular"
                        android:text="@string/remember_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sanspro_semibold"
                        android:padding="8.0dip"
                        android:tag="binding_1"
                        android:text="@string/sign_in"
                        android:textColor="@color/color_text_primary"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
